[package]
name = "mti-fun-os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = [
  "kernel",
  "init",
  "syscalls",
  "libs/libsyscalls",
  "libs/libruntime",
  "servers/process-server",
  "servers/vfs-server",
  "servers/memfs-server",
  "host-dynlinker",
]

[workspace.dependencies]
# OS-target dependencies (not for build/host)
addr2line = { version = "0.21.0", default-features = false, features = ["rustc-demangle", "object"] }
async-trait = "0.1.89"
bit_field = "0.10.2"
bitflags = "2.9.0"
bootloader_api = "0.11"
futures = { version = "0.3.31", default-features = false, features = ["async-await", "alloc"] }
hashbrown = "0.15.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
libc = "0.2.171"
log = "0.4.27"
memoffset = "0.9.1"
raw-cpuid = "11.5.0"
rustc-demangle = { version = "0.1", default-features = false }
spin = "0.10.0"
typed-arena = { version = "2.0.2", default-features = false }
uart_16550 = "0.3.2"
x86_64 = "0.15.2"
xmas-elf = "0.10.0"
zero = "0.1.3"
