[package]
name = "host-dynlinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
xmas-elf = "0.9.1"
zero = "0.1.3"
bitflags = "2.4.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = "0.2.152"