[package]
name = "host-dynlinker"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
xmas-elf = "0.10.0"
zero = "0.1.3"
bitflags = "2.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
libc = "0.2.171"
