[package]
name = "init"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
xmas-elf = { workspace = true }
zero = { workspace = true }
libruntime = { path = "../libs/libruntime", default-features = false }
libsyscalls = { path = "../libs/libsyscalls" }
