[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
spin = "0.9.2"
uart_16550 = "0.2.15"
x86_64 = "0.14.4"
volatile = "0.4.4"

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-display", "none"]
test-args = ["-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1

[package.metadata.bootloader]
# kernel base: 0x800000000000
kernel-stack-address = "0x800040000000"
physical-memory-offset = "0x800100000000"
kernel-stack-size = 5
