[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = { workspace = true }
bitflags = { workspace = true }
bootloader_api = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
memoffset = { workspace = true }
raw-cpuid = { workspace = true }
spin = { workspace = true }
uart_16550 = { workspace = true }
x86_64 = { workspace = true }
syscalls = { path = "../syscalls" }
