[package]
name = "libruntime"
version = "0.1.0"
edition = "2021"

[dependencies]
libsyscalls = { path = "../libsyscalls" }
log = "0.4.20"
bit_field = "0.10.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
addr2line = { version = "0.21.0", default-features = false, features = ["rustc-demangle", "object"] }
typed-arena = { version = "2.0.2", default-features = false }