[package]
name = "libruntime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"] # "dylib"

[dependencies]
async-trait = "0.1.89"
libsyscalls = { path = "../libsyscalls" }
log = "0.4.27"
bit_field = "0.10.2"
bitflags = "2.9.0"
hashbrown = "0.15.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
addr2line = { version = "0.21.0", default-features = false, features = ["rustc-demangle", "object"] }
typed-arena = { version = "2.0.2", default-features = false }

[features]
default = ["entry"]
entry = []
