[package]
name = "libruntime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"] # "dylib"

[dependencies]
addr2line = { workspace = true }
async-trait = { workspace = true }
bit_field = { workspace = true }
bitflags = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
typed-arena = { workspace = true }
libsyscalls = { path = "../libsyscalls" }

[features]
default = ["entry"]
entry = []
