[package]
name = "libruntime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"] # "dylib"

[dependencies]
async-trait = { workspace = true }
bit_field = { workspace = true }
bitflags = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
typed-arena = { workspace = true }
libsyscalls = { path = "../libsyscalls" }

[features]
default = ["entry", "init-process"]
entry = []
init-process = []
