[package]
name = "process-server"
version = "0.1.0"
edition = "2021"

[dependencies]
libsyscalls = { path = "../../libs/libsyscalls" }
libruntime = { path = "../../libs/libruntime" }
log = "0.4.27"
hashbrown = "0.15.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
xmas-elf = "0.10.0"