[package]
name = "process-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rustc-demangle = { workspace = true }
xmas-elf = { workspace = true }
libruntime = { path = "../../libs/libruntime" }
libsyscalls = { path = "../../libs/libsyscalls" }