[package]
name = "vfs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
libruntime = { path = "../../libs/libruntime" }